Countdown funcionando para 1 evento.

--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -23,7 +23,7 @@
       
     </form>
     <section class='container__events'>
-      <ul class='events'>
+      <ul id='events'>
         <!-- <li class='events__item'><p class='countdown'>147 dias 12h 22min 22s</p> - <p>Aniversário da Virgínia</p> - <p>02/12/2021</p></li> -->
         <!-- <li class='events__item'><p>300 dias 12h 22min 22s</p> - <p>Aniversário do Henrique</p> - <p>04/02/2021</p></li> -->
       </ul>
