create: card template

--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -29,6 +29,17 @@
     </div>  
     <section>
       <button type='button' class='add-button' onclick='eventController.toggleModal(event)'><p>+</p></button>
+      <div class="card card-empty">
+        <div class="card__countdown">
+          <div class="countdown__time"><strong>--</strong><p>Days</p></div>
+          <div class="countdown__time"><strong>--</strong><p>Hours</p></div>
+          <div class="countdown__time"><strong>--</strong><p>Minutes</p></div>
+          <div class="countdown__time"><strong>--</strong><p>Seconds</p></div>
+        </div>
+        <div class="card__title">
+          <h2>Has empty =(</h2>
+        </div>
+      </div>
     </section>
   </main>
   <script src="./assets/javascript/Controller/EventController.js"></script>
